@startuml FonoApp - Diagrama de Clases

' Configuración y Base de Datos
class AppSettings {
  + MONGODB_URI: str
  + MONGODB_DB_NAME: str
}

class database {
  + mongo_client: AsyncIOMotorClient
  + connect_to_mongo()
  + close_mongo_connection()
  + get_db()
}

' ── Modelos Pydantic ──────────────────────────────────────
class UsuarioBase {
  + nombre: str
  + email: EmailStr
  + activo: bool
  + rol: str
  + estado: str
}

note right of UsuarioBase
  Roles: admin | medico | paciente | emisor
  Estados: activo | ocupado | consulta
end note

class UsuarioCreate {
  + password: str
  + acepta_terminos: bool
}

class UsuarioPublico {
  + id: str
}

class ActividadCategoria {
  + id: str
  + categoria: str
  + actividades: List[str]
}

note right of ActividadCategoria
  Categorías en BD:
  respiracion, fonacion, resonancia,
  articulacion, prosodia,
  discriminacion_auditiva, practica_conmigo
end note

class Asignacion {
  + id: str
  + paciente_email: EmailStr
  + medico_email: EmailStr
  + actividades_asignadas: list[dict]
  + dificultad: str
  + fecha_asignacion: datetime
  + estado: str
  + tipo: str
}

note right of Asignacion
  estados: pendiente | aceptada | cancelada
  tipo: automatica | manual
end note

class ContenidoAdmin {
  + id: str
  + imagenes: List[str]
  + videos: List[str]
  + audios_referencia: List[str]
  + textos_sistema: List[Any]
  + instrucciones: Any
}

class HistorialActividad {
  + id: str
  + paciente_email: EmailStr
  + categoria: str
  + actividad: str
  + puntos_obtenidos: int
  + nivel: int
  + fecha: datetime
  + feedback: str
}

note right of HistorialActividad
  feedback=null → evaluación pendiente
  Se crea automáticamente cuando
  el paciente completa un juego
end note

class PerfilPaciente {
  + id: str
  + paciente_email: EmailStr
  + nombre: str
  + edad: int
  + escolaridad: str
  + genero: str
  + fecha_registro: datetime
  + tutor: str
  + parentesco: str
}

class SesionApp {
  + id: str
  + paciente_email: EmailStr
  + fecha: datetime
  + minutos_conectado: int
}

class ResultadoJuego {
  + id: str
  + paciente_email: EmailStr
  + categoria: str
  + juego: str
  + paso_completado: int
  + total_pasos: int
  + completado: bool
  + fecha: datetime
  + notas: str
  + puntos: int
  + nivel: int
}

note right of ResultadoJuego
  Catálogo y Resultados
  Dinámicamente Escalables:
  Nuevos juegos y categorías se 
  añaden creando un documento
  en BD en 'actividades'.
  El motor los renderiza sin
  necesidad de alterar este Modelo.
end note

' ── Routers activos ───────────────────────────────────────
class AuthRouter {
  + prefix: "/auth"
  + mostrar_login() GET
  + mostrar_registro() GET
  + procesar_registro() POST
  + procesar_login() POST
}

class PacienteRouter {
  + prefix: "/paciente"
  + vista_perfil_paciente() GET
  + guardar_perfil_paciente() POST
}

note right of PacienteRouter
  Muestra 4 actividades aleatorias
  del día (o las asignadas por médico)
  Guarda email en sessionStorage
end note

class EmisorRouter {
  + prefix: "/emisor"
  + home_emisor() GET
}

class RoutesAdmin {
  + prefix: "/admin"
  + dashboard, pacientes, médicos
  + actividades, asignaciones (auto+manual)
  + historial, resultados, contenido
  + seed_actividades() GET
}

class RoutesDoctor {
  + prefix: "/doctor"
  + home, pacientes, perfil_paciente
  + actividades, asignaciones
  + historial, resultados
  + evaluaciones_pendientes
  + feedback() POST
  + estado() POST
}

class RoutesJuegos {
  + prefix: "/juegos"
  + hub principal dinámico
  + category_routes() GET
  + load_dynamic_game() GET
  + resultado() POST
  + seed_actividades() GET
}

note right of RoutesJuegos
  Sistema de Juegos Escalable:
  Los juegos se cargan desde
  la base de datos, por lo que 
  se pueden añadir infinitos 
  juegos renderizando templates 
  sin cambiar explícitamente el código
  de las rutas de Backend.

  POST /juegos/resultado:
  - Guarda en resultados_juegos
  - Si completado=true, también
    guarda en historial_actividades
  
  GET /juegos/seed-actividades:
  - Actualiza colección 'actividades'
    con los 23 juegos reales
end note

' ── Aplicación Principal ──────────────────────────────────
class FastAPIApp {
  + title: "FonoApp"
  + version: "1.0.0"
  + raiz() GET "/"
  + guardarResultadoJuego() JS global
}

note right of FastAPIApp
  guardarResultadoJuego() es una
  función JS global disponible en
  todos los juegos (via base.html)
  para guardar resultados en BD
end note

' ── Relaciones ────────────────────────────────────────────
UsuarioCreate --|> UsuarioBase
UsuarioPublico --|> UsuarioBase

database ..> AppSettings : usa
AuthRouter ..> database : usa
PacienteRouter ..> database : usa
PacienteRouter ..> PerfilPaciente : usa
PacienteRouter ..> SesionApp : usa
RoutesDoctor ..> database : usa
RoutesDoctor ..> Asignacion : usa
RoutesDoctor ..> HistorialActividad : usa
RoutesAdmin ..> database : usa
RoutesAdmin ..> ActividadCategoria : usa
RoutesAdmin ..> ContenidoAdmin : usa
RoutesAdmin ..> Asignacion : usa
RoutesAdmin ..> HistorialActividad : usa
RoutesJuegos ..> database : usa
RoutesJuegos ..> ResultadoJuego : usa
RoutesJuegos ..> HistorialActividad : crea al completar
FastAPIApp ..> database : usa
FastAPIApp ..> AuthRouter : incluye
FastAPIApp ..> PacienteRouter : incluye
FastAPIApp ..> EmisorRouter : incluye
FastAPIApp ..> RoutesAdmin : incluye
FastAPIApp ..> RoutesDoctor : incluye
FastAPIApp ..> RoutesJuegos : incluye

@enduml

Asignacion ..> UsuarioBase : referencia
HistorialActividad ..> UsuarioBase : referencia
PerfilPaciente ..> UsuarioBase : referencia
SesionApp ..> UsuarioBase : referencia
ResultadoJuego ..> UsuarioBase : referencia

@enduml
